fix: connect to vnc by vpn